Fix childless node cell alignement off by 4px with node Cell with children

--- a/ui/dom-explorer.reel/node-cell.reel/node-cell.css
+++ b/ui/dom-explorer.reel/node-cell.reel/node-cell.css
@@ -94,7 +94,7 @@
 
 
 .NodeCell--noChildren .NodeCell{
-    padding-left: 18px;
+    padding-left: 14px;
 }
 
 
